HelloUltraviolet/Fixtures/RejectedSource/Expressions/YieldFromInMismatch/Expected.uv
//! Expected diagnostic metadata for the YieldFromInMismatch rejected-source specimen.

expectedDiagnostic("E-CON-0222", "rule.21.YieldFrom-In-Err")
